fixed bug with hover on mobiles

--- a/src/shared/components/Anchor/Anchor.module.scss
+++ b/src/shared/components/Anchor/Anchor.module.scss
@@ -4,8 +4,16 @@
     transition: 0.3s;
     text-decoration: none;
   
-    &:hover {
-      color: var(--grey-600);
+    @media (hover: hover) {
+      &:hover {
+        color: var(--grey-600);
+      }
+    }
+
+    @media (hover: none) {
+      &:active {
+        color: var(--grey-600);
+      }
     }
   }
 }
