--- a/src/shared/components/Button/Button.module.scss
+++ b/src/shared/components/Button/Button.module.scss
@@ -33,9 +33,18 @@
     background-color: var(--primary-color);
     border: 1px solid var(--primary-color);
   
-    &:hover:not(:disabled) {
-      background-color: var(--primary-dark-color);
-      border-color: var(--primary-dark-color);
+    @media (hover: hover) {
+      &:hover:not(:disabled) {
+        background-color: var(--primary-dark-color);
+        border-color: var(--primary-dark-color);
+      }
+    }
+
+    @media (hover: none) {
+      &:active:not(:disabled) {
+        background-color: var(--primary-dark-color);
+        border-color: var(--primary-dark-color);
+      }
     }
   
     &:disabled {
@@ -47,10 +56,19 @@
   
   .Button.Outlined {
     border: 1px solid var(--button-outlined-border-color);
-  
-    &:hover:not(:disabled) {
-      background-color: var(--primary-color);
-      border-color: var(--primary-color);
+    
+    @media (hover: hover) {
+      &:hover:not(:disabled) {
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+      }
+    }
+
+    @media (hover: none) {
+      &:active:not(:disabled) {
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+      }
     }
   
     &:disabled {
